# hello-voxels

./: .gitignore  .gitmodules  CMakeLists.txt
src/: directirradiance.frag.glsl  indirectirradiance.frag.glsl  input.h  main.cc  multiplescattering.frag.glsl  numtk.h  proto.cc  rng.cc  rng.h  scatteringdensity.frag.glsl  singlescattering.frag.glsl  timer.h  transmittance.frag.glsl  voxeltraversal.frag.glsl
src/oglbase/: CMakeLists.txt
src/oglbase/include/oglbase/: handle.h  shader.h
src/oglbase/src/: error.cc  handle.cc  shader.cc
